# medimate

./: .gitignore  .vercelignore  CLAUDE.md  PRODUCTION.md  README.md  main.py  pyproject.toml  render.yaml  vercel.json
.cursor/rules/: api_rules.mdc  frontend_rules.mdc
.github/workflows/: keep-warm.yml
api/: .dockerignore  .env.example  Dockerfile  Dockerfile.minimal  README.md  api_guidelines.md  fly.toml  main.py  pyproject.toml  requirements.txt  test_api.py  test_langsmith.py  test_langsmith_traces.py  test_parallel_extraction.py  test_qdrant_cloud.py  test_upload.py  vercel.json
api/config/: logging_settings.py  settings.py
api/core/: vector_store.py
api/models/schemas/: analysis.py  base.py  predicate_discovery.py  upload.py
api/qdrant_storage/: meta.json
api/qdrant_storage/collection/predicate_k100273/: storage.sqlite
api/qdrant_storage/collection/predicate_k151967/: storage.sqlite
api/qdrant_storage/collection/predicate_k152054/: storage.sqlite
api/routes/: analysis.py  predicate_discovery.py  upload.py
api/services/: analysis_service.py  document_parser_service.py  extraction_config.py  extraction_tools.py  pdf_service.py  predicate_discovery_service.py  rag_service.py  storage_service.py
api/utils/: constants.py
frontend/: DESIGN_SYSTEM.md  frontend_guidelines.md  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/assistant/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/predicate-search/: page.tsx
frontend/src/components/: AnalysisResults.tsx  ApiHealth.tsx  DocumentSummary.tsx  FeatureCards.tsx  FileUpload.tsx  Header.tsx  Hero.tsx  IndicationInput.tsx
frontend/src/components/chat/: ChatPanel.tsx  DeviceDetailsPanel.tsx  DeviceListPanel.tsx  WorkflowPills.tsx  WorkspacePanel.tsx
frontend/src/components/predicate_search/: DeviceCard.tsx  PredicateFeatures.tsx  PredicateHero.tsx  SearchForm.tsx  SearchResults.tsx
frontend/src/config/: api.ts
frontend/src/types/: predicate.ts
notebooks/: CLAUDE.md  prototype.ipynb
project/: CHAT_INTERFACE_DESIGN.md  CLAUDE.md  PDF_ACCESS_FINDINGS.md  RECALL_SAFETY_PLAN.md  openFDA.md  plan.md
project/scripts/: fetch_510k_pdf.py
