[project]
name = "veramate"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.2",
    "pypdf>=5.9.0",
    "qdrant-client>=1.15.1",
]

[dependency-groups]
dev = [
    "requests>=2.32.4",
]
