[project]
name = "veramate-api"
version = "0.1.0"
description = "FastAPI backend for the Veramate project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.27",
    "alembic==1.13.1",
    "mangum==0.17.0",
    "langchain-pymupdf4llm>=0.4.1",
    "python-multipart>=0.0.20",
    "langchain-openai>=0.3.28",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain>=0.3.27",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest==8.0.1",
    "pytest-asyncio==0.23.5",
    "httpx==0.26.0",
    "black==24.2.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
]
